# oral

./: .env.example  .gitignore  CLAUDE.md  PR.md  README.md  TODO.frontend.md  TODO.md  gemini_live.py  main.py  pyproject.toml
app/: __init__.py  config.py  crud.py  db.py  main.py  models.py  pipeline.py  report.py  scenario_cases.py  schema.sql  seed.py  signals.py  storage.py  transcribe.py  tts.py
app/api/: __init__.py  health.py  live_ws.py  questions.py  recordings.py  reports.py  review.py  sessions.py
app/judge/: __init__.py  aggregate.py  band_descriptors.md  prompt.py  run.py
app/live/: __init__.py  bridge.py  client.py  director.py  help.py  latency.py  tee.py
data/: questions.json
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ModeSelect.jsx  Placeholder.jsx  VoiceWave.jsx
frontend/src/fixtures/: reportFixtures.js
frontend/src/lib/: api.js  api.test.js  live.js  live.test.js  modes.js  modes.test.js  nudge.js  nudge.test.js  polling.js  polling.test.js  prompts.js  prompts.test.js  questions.js  questions.test.js  report.js  report.test.js  sessionApi.js  sessionApi.test.js  (+2 more)
tests/: test_data_model.py  test_director.py  test_judge_prompt.py  test_judge_run.py  test_live_client.py  test_live_help.py  test_live_latency.py  test_live_tee.py  test_live_ws.py  test_pipeline.py  test_questions.py  test_recordings.py  test_reports_api.py  test_review_api.py  test_scenario_cases.py  test_seed.py  test_sessions_api.py  test_signals.py  test_tts.py
(+20 files in other folders)
