[project]
name = "oral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "faster-whisper>=1.2.1",
    "google-genai>=2.8.0",
    "pyaudio>=0.2.14",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
